--- a/src/components/ParallaxGallery/ParallaxGallery.module.scss
+++ b/src/components/ParallaxGallery/ParallaxGallery.module.scss
@@ -14,3 +14,14 @@
   flex-basis: 33.3%;
   text-align: center;
 }
+
+.title {
+  font-size: 3.6rem;
+  margin-bottom: 1rem;
+  font-weight: 500;
+}
+
+.text {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
