--- a/src/components/ParallaxGallery/ParallaxGallery.module.scss
+++ b/src/components/ParallaxGallery/ParallaxGallery.module.scss
@@ -13,12 +13,15 @@
 .content {
   flex-basis: 33.3%;
   text-align: center;
+  order: 2;
+  padding: 0 3rem;
 }
 
 .title {
-  font-size: 3.6rem;
+  font-size: 4rem;
   margin-bottom: 1rem;
   font-weight: 500;
+  margin-bottom: 1.5rem;
 }
 
 .text {
