--- a/src/components/ParallaxGallery/components/ParallaxImages/ParallaxImages.module.scss
+++ b/src/components/ParallaxGallery/components/ParallaxImages/ParallaxImages.module.scss
@@ -1,3 +1,29 @@
 .wrapper {
   flex-basis: 33.3%;
 }
+
+.galleryWrapper {
+  display: grid;
+  grid-template-columns: 1fr 5rem 1fr;
+  grid-template-rows: 1fr 12rem 1fr;
+}
+
+.imageWrapper {
+  position: relative;
+  width: 20rem;
+  height: 26rem;
+
+  &.topLeft {
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 2;
+  }
+
+  &.bottomRight {
+    grid-column: 2 / span 2;
+    grid-row: 2 / span 2;
+  }
+}
+
+.image {
+  object-fit: cover;
+}
