--- a/src/components/ParallaxGallery/components/ParallaxEffect/ParallaxEffect.module.scss
+++ b/src/components/ParallaxGallery/components/ParallaxEffect/ParallaxEffect.module.scss
@@ -1,6 +1,7 @@
 .parallax_wrapper {
-    width: 100%;
-    flex-basis: 0;
-    flex-grow: 1;
-    flex-shrink: 0;
+  width: 100%;
+  height: 100%;
+  flex-basis: 0;
+  flex-grow: 1;
+  flex-shrink: 0;
 }
