--- a/src/components/ParallaxGallery/components/ParallaxImages/ParallaxImages.module.scss
+++ b/src/components/ParallaxGallery/components/ParallaxImages/ParallaxImages.module.scss
@@ -13,14 +13,15 @@
   width: 20rem;
   height: 26rem;
 
-  &.topLeft {
+  &.bottomLeft {
     grid-column: 1 / span 2;
-    grid-row: 1 / span 2;
+    grid-row: 2 / span 2;
+    z-index: 2;
   }
 
-  &.bottomRight {
+  &.topRight {
     grid-column: 2 / span 2;
-    grid-row: 2 / span 2;
+    grid-row: 1 / span 2;
   }
 }
 
